Versión 1.011 11052019 16:38 pm, Se nyeva activity de noticias

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
         <!-- Primera activity -->
         <activity
             android:name=".MainActivity"
@@ -25,14 +24,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Activity Ingenieria de software -->
+        </activity> <!-- Activity Ingenieria de software -->
         <activity
             android:name=".activity_is"
-            android:parentActivityName=".activity_is" />
-
-        <!-- Activity asignaturas de IS -->
+            android:parentActivityName=".activity_is" /> <!-- Activity asignaturas de IS -->
         <activity
             android:name=".activity_is_uno"
             android:parentActivityName=".activity_is_uno">
@@ -41,31 +36,26 @@
         </activity>
         <activity
             android:name=".activity_ci"
-            android:parentActivityName=".activity_ci" />
-
-        <!-- Activity Programacion Basica -->
+            android:parentActivityName=".activity_ci" /> <!-- Activity Programacion Basica -->
         <activity
             android:name=".activity_pb"
-            android:parentActivityName=".activity_pb" />
-
-        <!-- Activity MEAD -->
+            android:parentActivityName=".activity_pb" /> <!-- Activity MEAD -->
         <activity
             android:name=".activity_mead"
-            android:parentActivityName=".activity_mead"
-            />
-        <!-- Activity fundamentos de matematica -->
-        <activity android:name=".activity_fm"
-            android:parentActivityName=".activity_fm"
-            />
-        <!-- Activity introduccion ING.SOFTWARE -->
-        <activity android:name=".activity_iis"
-            android:parentActivityName=".activity_iis"
-            />
-        <!-- Activity Calculo Diferencial -->
+            android:parentActivityName=".activity_mead" /> <!-- Activity fundamentos de matematica -->
+        <activity
+            android:name=".activity_fm"
+            android:parentActivityName=".activity_fm" /> <!-- Activity introduccion ING.SOFTWARE -->
+        <activity
+            android:name=".activity_iis"
+            android:parentActivityName=".activity_iis" /> <!-- Activity Calculo Diferencial -->
         <activity
             android:name=".activity_cd"
-            android:parentActivityName=".activity_cd"
-            ></activity>
+            android:parentActivityName=".activity_cd" />
+        <!-- Activity Noticias -->
+        <activity
+            android:name=".activity_no"
+            android:parentActivityName=".activity_no" />
     </application>
 
 </manifest>
